[package]
name = "actix_redis_websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-actors = "4"
actix-files = "0.6"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.27.5", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tokio-stream = "0.1"